# CinemAI

./: .gitignore  README.md  plot_user_profile_clusters.py
backend/: .flake8  .pre-commit-config.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3fc134fcd13f_create_user_profiles_table.py  7110b2bfcb63_add_movies_column_to_user_profiles.py  7d67ed3acc62_change_text_to_json_columns.py
backend/api/: dependencies.py  recommendation_factory.py  routes.py
backend/core/: di.py  log_config.py  main.py  recommendation_factory.py  service_factories.py  settings.py
backend/db/: deps.py  engine.py  models.py
backend/demo-data/: demo_watch_history.json
backend/domain/: entities.py  interfaces.py
backend/managers/: recommendation_manager.py
backend/repositories/: cache.py  user_profile.py  vector_store.py
backend/samples/: filmweb_data.json
backend/schemas/: filters.py  recommendation.py  watch_history.py
backend/services/: clustering_service.py  embedding_service.py  field_detection_service.py  filtering_service.py  llm_service.py  recommendation_service.py  tmdb_service.py  user_profile_service.py  visualization_service.py
backend/tests/: conftest.py  test_api.py  test_recommendation_manager.py  test_services.py  test_user_profile_service.py
backend/utils/: batching.py  similarity.py  weighting.py
