[tool.poetry]
name = "cinemai"
version = "0.1.0"
description = "Advanced movie and TV show recommendation system powered by embeddings and GPT-4o."
authors = ["Lukasz <lukuch12@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
langchain = "^0.1.14"
openai = "^1.23.0"
hdbscan = "^0.8.33"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
structlog = "^24.1.0"
redis = "^5.0.4"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.4"
pydantic = "^2.7.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
injector = "^0.21.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.10.1"
python-multipart = "^0.0.20"
fastapi-injector = "^0.8.0"
sqlalchemy = "^2.0.41"
alembic = "^1.16.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = {extras = ["cli"], version = "^0.27.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 